crates/ferrum-interfaces/tests/ui/vnext/fail/operation_planning_authority_is_private.rs
use ferrum_interfaces::vnext::OperationPlanningHandle;

fn inspect(handle: &OperationPlanningHandle<'_>) {
    let _ = handle.authority();
}

fn main() {}
